style.css
/* ... */
strong.date {
  margin: 8px 10px;
  color: var(--primary-light);
  display: flex;
  align-items: center;
  font-weight: 600;
}

.warning[style="bottom: 5px"] svg {
  width: 22px;
  margin-right: 1px;
}

p.lestijden {
  display: inline;
}

strong {
  font-weight: 600;
  letter-spacing: 0.00625rem;
  font-family: Google Sans Rounded;
}

details strong {
  font-size: inherit;
}

#schedule {
  margin-top: 2.5rem;
  height: calc(100vh - 2.5rem);
}
#schedule div {
  flex: 1;
}
.weekEnabled,
.dayEnabled,
.ltrEnabled {
  display: flex;
  gap: 10px;
}
.dayEnabled {
  gap: 12px;
}
#schedule.listEnabled {
  margin-top: 3rem;
}
#schedule.ltrEnabled {
  flex-direction: column;
  gap: 0;
  margin-top: 3.75rem;
  height: calc(100vh - 3.75rem);
}
.ltrEnabled strong.date {
  margin: 6px 10px;
  transform: translateY(-1.15rem);
}
.ltrEnabled div {
  height: 3rem;
}
.ltrEnabled .day div {
  display: flex;
}
.ltrEnabled .les p {
  display: block;
}
.ltrEnabled .warning {
  bottom: 20px !important;
}
.les {
  height: calc(var(--height) - 2px);
  transition: filter 0.1s cubic-bezier(1, 0, 0, 1);
  cursor: pointer;
  position: absolute;
  display: flex;
  align-items: center;
  line-height: 1.4;
  inset: 0;
  top: var(--margin);
}
#schedule .les.clicked {
  filter: brightness(1.15);
}
#info .les {
  padding: 0px 10px;
  min-height: var(--height);
  position: relative;
  top: 0;
}
#info .groups {
  display: none;
}
.moreInfo {
  display: flex;
  gap: 0.4rem;
}
.dates p {
  display: block;
}
#info .dates {
  cursor: default;
  padding: 0;
}
#schedule section {
  position: relative;
}
section div br:not(:first-of-type) {
  display: none;
}
.ltrEnabled section {
  display: flex;
  margin-top: 0 !important;
}
.ltrEnabled section div br:not(:first-of-type) {
  display: block;
}
.ltrEnabled section div {
  width: calc(var(--height) * 3 - 22px);
  margin-bottom: 0;
  margin-right: 0.125rem;
  padding: 6px 10px;
  line-height: normal !important;
  top: unset;
  height: 3.5rem;
  left: calc(var(--margin) * 3);
}
.dayEnabled div {
  width: calc(100vw - 36px);
  margin-right: 24px;
}
.ltrEnabled section div:first-of-type {
  border-radius: 0.25rem;
  border-top-left-radius: 1rem;
  border-bottom-left-radius: 1rem;
}
.ltrEnabled section div:last-of-type:not(:only-of-type) {
  border-top-left-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}
.ltrEnabled section div:last-of-type {
  border-top-right-radius: 1rem;
  border-bottom-right-radius: 1rem;
}
#ltr {
  cursor: pointer;
  background: var(--primary-accent);
  fill: var(--primary-light);
  color: var(--primary-light);
  font-size: 14px;
}
#ltr:active {
  border-radius: 0.75rem;
}
#ltr span {
  vertical-align: text-top;
  font-family:
    Google Sans Flex,
    Inter,
    system-ui;
  font-variation-settings:
    "opsz" 20,
    "ROND" 100;
}
#ltr svg {
  fill: var(--accent-text);
  transition: rotate 0.2s;
}
#side {
  position: fixed;
  background: var(--primary-accent);
  z-index: 1;
  left: 0;
  display: none;
  flex-direction: column;
  gap: 0.5rem;
  padding: 0.5rem 0.25rem;
  border-radius: 1rem;
  margin: 0.25rem;
  margin-top: 3rem;
}
.pillContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.sidebarPresent {
  margin-left: 4.25rem;
}
b {
  font-weight: 600;
  letter-spacing: 0.1px;
  font-family:
    Google Sans Flex,
    Inter,
    system-ui;
}
.btn {
  background-color: #f1f1f1;
  border: 0;
  padding: 0.5rem 1rem;
  line-height: 1.5;
  border-radius: 4rem;
  transition: all 0.1s cubic-bezier(1, 0, 0, 1);
  font-weight: 500;
  letter-spacing: 0.1px;
}
.btn:hover,
#previousDay:hover,
#nextDay:hover,
#settingsButton:hover,
#announcementsButton:hover {
  filter: brightness(0.9);
}
dialog .btn {
  color: var(--primary-dark);
  background: var(--primary-light);
}
#ltr.btn:active,
dialog .btn:active {
  border-radius: 0.75rem;
}
#previousDay,
#nextDay,
#loadSchedule,
#settingsButton,
#announcementsButton {
  transition: all 0.1s ease-in-out;
}
#announcementsButton {
  transition: all 0.1s ease-in-out;
}

button:not(:disabled) {
  cursor: pointer;
}

#icon,
.icon {
  fill: black;
  vertical-align: middle;
  width: 1.5rem;
  height: 1.5rem;
}

.selected {
  padding: 9px;
  background-color: var(--primary-light) !important;
  color: var(--primary-dark) !important;
  border-radius: 2rem !important;
}
.themes {
  padding: 8px 14px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.analytics-text {
  display: flex;
  flex-direction: column;
  text-align: left;
  padding: 0;
}
@font-face {
  font-family: "FontWithASyntaxHighlighter";
  src: url("/FontWithASyntaxHighlighter-Regular.woff2") format("woff2");
}
code {
  font-family: "FontWithASyntaxHighlighter", monospace;
}
dialog details summary {
  cursor: pointer;
}
dialog details {
  margin-bottom: 4px;
}
details {
  overflow: hidden;
  font-weight: 450;
}
summary::marker {
  font-family: inherit;
}
details::details-content {
  block-size: 0;
  opacity: 0;
  transition: all 0.2s;
  transition-behavior: allow-discrete;
}
details[open]::details-content {
  block-size: auto;
  opacity: 1;
}
.les span strong {
  font-size: 1rem;
  font-variation-settings: initial;
}
.innerSpan {
  all: unset;
  display: block !important;
  width: calc(100% - 1.2rem);
  min-height: var(--height);
  text-wrap: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
ol,
ul {
  padding-left: 20px;
}
.pill {
  border-radius: 0.5rem;
  transition: all 0.1s ease-in-out;
  background-color: var(--primary-background);
  padding: 0.4rem 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  word-break: break-word;
  gap: 0.25rem;
  width: fit-content;
  color: var(--accent-text);
  font-weight: 450;
  font-family:
    Google Sans Flex,
    Inter,
    system-ui;
  letter-spacing: 0.1px;
  flex-wrap: wrap;
  font-size: 14px;
  border: none;
}
/* ... */

